# ai_audit_project

./: .env  .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml  run_pipeline.py  shared_config.py
model/application/: __init__.py  auditor.py  config.py  deep_agent.py  enhanced_retriever.py  evaluator.py  main.py  metrics.py  models.py  output.py  possible_answer_generator.py  possible_answer_models.py  raw_extractor.py  retriever.py
model/milvus/: __init__.py  chunker.py  collection.py  config.py  extractor.py  indexer.py  main.py  models.py
output/: audit_contrato-de-intermediacao - XP.json  audit_contrato-de-intermediacao - XP.txt  bm25_model.json
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: 30d3378e-8f81-4c4a-b866-27959bece3c8
